--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -20,6 +20,7 @@
         <!-- Campos da lista. -->
         <thead class="bg-gray-200 text-gray-700 sticky top-0">
           <tr>
+            <th class="px-4 py-2">PI</th>
             <th class="px-4 py-2">NE</th>
             <th class="px-4 py-2">DIAS</th>
             <th class="px-4 py-2">A LIQUIDAR (R$)</th>
@@ -39,6 +40,7 @@
             <tr
               class="table-line bg-gray-50 hover:bg-gray-100 text-center border-b"
             >
+              <td class="px-4 py-2">{{ note_ne.pi }}</td>
               <td class="px-4 py-2">{{ note_ne.cod_ne }}</td>
               <td class="px-4 py-2">{{ note_ne.data|days_since }}</td>
               <td class="px-4 py-2">{{ note_ne.a_liquidar|brl }}</td>
